# mcp-rag

./: README.md  pyproject.toml
src/: main.py  processor.py
