[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "academic-rag-mcp"
version = "0.1.0"
description = "Academic RAG MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "langchain-community",
    "langchain-huggingface",
    "chromadb",
    "sentence-transformers",
    "pypdf",
]

[project.scripts]
academic-rag = "academic_rag_mcp.main:main"
